Fix display corruption on IE
Remove javascript added in #223 which is unnecessary

Damn, the javascript I just removed *IS required by firefox

Overflow hidden was added to #main on pull #191, this change makes that redundant, also fixed minor CSS problem on clouds theme that was introduced with this change and removed redundant css on FAB and minimal themes

--- a/themes/clouds/css-1.5.4/style.css
+++ b/themes/clouds/css-1.5.4/style.css
@@ -3774,7 +3774,6 @@ span.link_text {
 #main {
 	min-width: 600px;
 	width: 100%;
-	overflow: hidden;
 	padding: 5px 2px 0 2px;
 	display: table;
 	table-layout: fixed;
@@ -3792,10 +3791,13 @@ span.link_text {
 }
 
 #sidebar {
-	border:         1px solid #8fbcff;
 	width:          20%;
 	display:        table-cell;
 	vertical-align: top;
+}
+
+#sidebarAccordion {
+	border: 1px solid #8fbcff;
 }
 
 #separator {
@@ -3803,6 +3805,7 @@ span.link_text {
 	width:            2.5em;
 	position:         relative;
 	background-color: transparent;
+	overflow: hidden;
 }
 
 #separator:after {
