--- a/themes/fab/css-1.5.4/style.css
+++ b/themes/fab/css-1.5.4/style.css
@@ -2367,7 +2367,6 @@ dd .deletelink {
 	min-width: 600px;
 	width: 100%;
 	padding: 3px 0 0 0;
-	overflow: hidden;
 	display: table;
 	table-layout: fixed;
 }
@@ -2398,6 +2397,7 @@ dd .deletelink {
 	width:            2.5em;
 	position:         relative;
 	background-color: transparent;
+	overflow: hidden;
 }
 
 #separator:after {
@@ -2428,13 +2428,11 @@ dd .deletelink {
 	background: #ccc url(images/indi_sprite.png) no-repeat -1px 100px;
 }
 
-#sidebarAccordion,
-#sidebarAccordion2 {
+#sidebarAccordion {
 	width: auto;
 }
 
-#sidebarAccordion h3,
-#sidebarAccordion2 h3 {
+#sidebarAccordion h3 {
 	text-align: center;
 }
 
