--- a/themes/minimal/css-1.5.4/style.css
+++ b/themes/minimal/css-1.5.4/style.css
@@ -2768,7 +2768,6 @@ dd .deletelink {
 #main {
 	min-width: 600px;
 	width: 100%;
-	overflow: hidden;
 	padding-top: 0px;
 	display: table;
 	table-layout: fixed;
@@ -2785,13 +2784,11 @@ dd .deletelink {
 	overflow: auto;
 }
 
-#sidebarAccordion,
-#sidebarAccordion2 {
+#sidebarAccordion {
 	width: auto;
 }
 
-#sidebarAccordion h3,
-#sidebarAccordion2 h3 {
+#sidebarAccordion h3 {
 	height: 30px;
 	text-align: center;
 	background: #ddd;
@@ -2799,7 +2796,6 @@ dd .deletelink {
 }
 
 #sidebar {
-	border-color: #ddd;
 	width: 20%;
 	display: table-cell;
 	vertical-align: top;
@@ -2810,6 +2806,7 @@ dd .deletelink {
 	width:            2.5em;
 	position:         relative;
 	background-color: transparent;
+	overflow: hidden;
 }
 
 #separator:after {
@@ -2820,8 +2817,8 @@ dd .deletelink {
 	width:                   10px;
 	height:                  99999px;
 	content:                 "";
-	border: 1px solid #81a9cb;
-	border-top-left-radius: 3px;
+	border:                  1px solid #888;
+	border-top-left-radius:  3px;
 	border-top-right-radius: 3px;
 }
 
