--- a/themes/webtrees/css-1.5.4/style.css
+++ b/themes/webtrees/css-1.5.4/style.css
@@ -3585,7 +3585,6 @@ dd .deletelink {
 #main {
 	min-width: 600px;
 	width: 100%;
-	overflow: hidden;
 	display: table;
 	table-layout: fixed;
 }
@@ -3615,7 +3614,6 @@ dd .deletelink {
 
 /* sidebar */
 #sidebar {
-	border-color:   #dddddd;
 	width:          20%;
 	display:        table-cell;
 	vertical-align: top;
@@ -3626,6 +3624,7 @@ dd .deletelink {
 	width:            2.5em;
 	position:         relative;
 	background-color: transparent;
+	overflow: hidden;
 }
 
 #separator:after {
